--- a/menusacoplados/menusacoplados/ProyectoFinal.csproj
+++ b/menusacoplados/menusacoplados/ProyectoFinal.csproj
@@ -84,11 +84,11 @@
     <Compile Include="InfoEdu.Designer.cs">
       <DependentUpon>InfoEdu.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmListasCiruclares.cs">
+    <Compile Include="FrmListaEnlazadaS.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmListasCiruclares.Designer.cs">
-      <DependentUpon>FrmListasCiruclares.cs</DependentUpon>
+    <Compile Include="FrmListaEnlazadaS.Designer.cs">
+      <DependentUpon>FrmListaEnlazadaS.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmListaSimple.cs">
       <SubType>Form</SubType>
@@ -102,10 +102,8 @@
     <Compile Include="FrmMenu.Designer.cs">
       <DependentUpon>FrmMenu.cs</DependentUpon>
     </Compile>
-    <Compile Include="ListaCirc.cs" />
     <Compile Include="NodoArbol.cs" />
     <Compile Include="NodoBicola.cs" />
-    <Compile Include="NodoListCirc.cs" />
     <Compile Include="Persona.cs" />
     <Compile Include="FrmPilas.cs">
       <SubType>Form</SubType>
@@ -146,8 +144,8 @@
     <EmbeddedResource Include="InfoEdu.resx">
       <DependentUpon>InfoEdu.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmListasCiruclares.resx">
-      <DependentUpon>FrmListasCiruclares.cs</DependentUpon>
+    <EmbeddedResource Include="FrmListaEnlazadaS.resx">
+      <DependentUpon>FrmListaEnlazadaS.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmListaSimple.resx">
       <DependentUpon>FrmListaSimple.cs</DependentUpon>
