--- a/menusacoplados/menusacoplados/ProyectoFinal.csproj
+++ b/menusacoplados/menusacoplados/ProyectoFinal.csproj
@@ -237,5 +237,11 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ABB1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Recorrido1.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
